--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2021"
 
 
 [dependencies]
-rocket = {version = "0.5.0-rc.2", features = ["json"]}
+rocket = { version = "0.5.0-rc.2", features = ["json"] }
 serde = "1.0.136"
 dotenv = "0.15.0"
 rocket_cors = "0.5"
+serpapi-search-rust = "0.1.0"
+tokio = { version = "1", features = ["full"] }
 
 [dependencies.mongodb]
 version = "2.2.0"
